Bug#26898, Alter table to empty merge from ndb causes mysqld to crash